--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "@prismicio/react": "^2.9.1",
     "next": "^15.0.2",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0"
   },
   "devDependencies": {
     "@slicemachine/adapter-next": "^0.3.56",
