--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "concurrently \"npm:next:dev\" \"npm:slicemachine\" --names \"next,slicemachine\" --prefix-colors blue,magenta",
     "next:dev": "next dev",
     "build": "next build",
+    "postbuild": "next-sitemap",
     "start": "next start",
     "lint": "next lint",
     "slicemachine": "start-slicemachine",
@@ -18,6 +19,7 @@
     "@prismicio/next": "^1.7.1",
     "@prismicio/react": "^2.9.1",
     "next": "^15.0.2",
+    "next-sitemap": "^4.2.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0"
