feat: add animations

--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@gsap/react": "^2.1.1",
     "@prismicio/client": "^7.12.0",
     "@prismicio/next": "^1.7.1",
     "@prismicio/react": "^2.9.1",
+    "gsap": "^3.12.5",
     "next": "^15.0.2",
     "next-sitemap": "^4.2.3",
     "react": "^18.3.1",
